Fix d3-celestial form controls showing on mobile
- Add cleanup code to remove form elements after Celestial.display()
- Add more comprehensive CSS selectors to hide d3-celestial forms

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -92,7 +92,19 @@ html {
 }
 
 /* Hide d3-celestial's built-in form (we use our own UI) */
-#celestial-map form {
+#celestial-map form,
+#celestial-map ~ form,
+#celestial-map + form,
+form:has(input[name="datetime"]),
+form:has(input[name="lat"]),
+div[id="celestial-map"] ~ * form {
+  display: none !important;
+}
+
+/* Also hide any form controls that d3-celestial might add as siblings */
+#celestial-map ~ div:has(> input),
+#celestial-map ~ div:has(> select),
+#celestial-map ~ div:has(> label) {
   display: none !important;
 }
 
